--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,10 @@ edition = "2021"
 [dependencies]
 byteorder = "1.4.3"
 chrono = "0.4.31"
+embedded-hal = "0.2.7"
+embedded-hal-mock = "0.9.0"
 i2cdev = "0.6.0"
+
+[[bin]]
+name = "mock"
+path = "src/mock.rs"
